--- a/nautilus-ionic/package.json
+++ b/nautilus-ionic/package.json
@@ -29,6 +29,7 @@
     "@capacitor/status-bar": "6.0.2",
     "@ionic/angular": "^8.0.0",
     "axios": "^1.7.9",
+    "chart.js": "^4.4.7",
     "ionicons": "^7.0.0",
     "keycloak-js": "^26.1.0",
     "rxjs": "~7.8.0",
