--- a/nautilus-ionic/package.json
+++ b/nautilus-ionic/package.json
@@ -28,11 +28,14 @@
     "@capacitor/keyboard": "6.0.3",
     "@capacitor/status-bar": "6.0.2",
     "@ionic/angular": "^8.0.0",
+    "@tailwindcss/postcss": "^4.0.3",
     "axios": "^1.7.9",
     "chart.js": "^4.4.7",
     "ionicons": "^7.0.0",
     "keycloak-js": "^26.1.0",
+    "postcss": "^8.5.1",
     "rxjs": "~7.8.0",
+    "tailwindcss": "^4.0.3",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
   },
